--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -1,79 +1,107 @@
 <section id="adminSection" data-ng-controller="adminController as ac" ng-init="init()">
-	<!-- <div class="row"> -->
-		<div class="col-xs-8 col-xs-offset-2" style="text-align:left;">
-			<form name="newQuestionForm" class="well page" data-ng-submit="create(newQuestion)" novalidate>
-				<fieldset>
-					<legend>New Question</legend>
-					<div class="form-group">
-						<label for="inputQuestion" class="col-xs-2 control-label">Question</label>
-						<div class="col-xs-10">
-							<input type="text" class="form-control" id="inputQuestion" ng-model="newQuestion.question" placeholder="Survey Question" required>
+	<div class="well page" ng-show="!currentUser">
+		<form class="form-signin"name="form"ng-submit="login(form)"novalidate>
+			<div class="form-group">
+				<div class="col-xs-12">
+					<label class=" col-xs-2 control-label">username</label>
+					<div class="col-xs-8">
+						<input type="text" class="form-control" placeholder="username" name="username" ng-model="user.username" required autofocus>
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-xs-12">
+					<label class=" col-xs-2 control-label">Password</label>
+					<div class="col-xs-8">
+						<input type="password" class="form-control" placeholder="Password" name="password" ng-model="user.password" required>
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-lg-12">
+					<button type="submit" class="btn btn-primary btn-raised surveySubmitBtn">Sign In</button>
+				</div>
+			</div>
+			<span class="clearfix"></span>
+		</form>
+	</div>
+	<div class="col-xs-8 col-xs-offset-2" style="text-align:left;" ng-show="currentUser">
+		<form name="newQuestionForm" class="well page" data-ng-submit="create(newQuestion)" novalidate>
+			<fieldset>
+				<legend>New Question</legend>
+				<div class="form-group">
+					<label for="inputQuestion" class="col-xs-2 control-label">Question</label>
+					<div class="col-xs-10">
+						<input type="text" class="form-control" id="inputQuestion" ng-model="newQuestion.question" placeholder="Survey Question" required>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-xs-12">
+						<label class=" col-xs-2 control-label">Answer 1</label>
+						<div class="col-xs-8">
+							<input type="text" class="form-control" ng-model="newQuestion.answers.a" placeholder="Answer 1" required>
 						</div>
 					</div>
-					<div class="form-group">
-						<div class="col-xs-12">
-							<label class=" col-xs-2 control-label">Answer 1</label>
-							<div class="col-xs-8">
-								<input type="text" class="form-control" ng-model="newQuestion.answers.a" placeholder="Answer 1" required>
-							</div>
+				</div>
+				<div class="form-group">
+					<div class="col-xs-12">
+						<label class=" col-xs-2 control-label">Answer 2</label>
+						<div class="col-xs-8">
+							<input type="text" class="form-control" ng-model="newQuestion.answers.b" placeholder="Answer 2" required>
 						</div>
 					</div>
-					<div class="form-group">
-						<div class="col-xs-12">
-							<label class=" col-xs-2 control-label">Answer 2</label>
-							<div class="col-xs-8">
-								<input type="text" class="form-control" ng-model="newQuestion.answers.b" placeholder="Answer 2" required>
-							</div>
+				</div>
+				<div class="form-group">
+					<div class="col-xs-12">
+						<label class=" col-xs-2 control-label">Answer 3</label>
+						<div class="col-xs-8">
+							<input type="text" class="form-control" ng-model="newQuestion.answers.c" placeholder="Answer 3 (Optional)">
 						</div>
 					</div>
-					<div class="form-group">
-						<div class="col-xs-12">
-							<label class=" col-xs-2 control-label">Answer 3</label>
-							<div class="col-xs-8">
-								<input type="text" class="form-control" ng-model="newQuestion.answers.c" placeholder="Answer 3 (Optional)">
-							</div>
+				</div>
+				<div class="form-group">
+					<div class="col-xs-12">
+						<label class=" col-xs-2 control-label">Answer 4</label>
+						<div class="col-xs-8">
+							<input type="text" class="form-control" ng-model="newQuestion.answers.d" placeholder="Answer 4 (Optional)">
 						</div>
 					</div>
-					<div class="form-group">
-						<div class="col-xs-12">
-							<label class=" col-xs-2 control-label">Answer 4</label>
-							<div class="col-xs-8">
-								<input type="text" class="form-control" ng-model="newQuestion.answers.d" placeholder="Answer 4 (Optional)">
-							</div>
-						</div>
+				</div>
+				<div class="form-group">
+					<div class="col-lg-12">
+						<button type="submit" class="btn btn-primary btn-raised surveySubmitBtn" ng-disabled="!newQuestionForm.$valid">Submit</button>
 					</div>
-					<div class="form-group">
-						<div class="col-lg-12">
-							<button type="submit" class="btn btn-primary btn-raised surveySubmitBtn" ng-disabled="!newQuestionForm.$valid">Submit</button>
-						</div>
-					</div>
-				</fieldset>
-			</form>
-		</div>
-		<div class="ccol-xs-8 col-xs-offset-2">
-			<table class="table table-striped table-hover  well page">
-				<thead>
-					<tr>
-						<th>#</th>
-						<th>Question</th>
-						<th>Answer 1</th>
-						<th>Answer 2</th>
-						<th>Answer 3</th>
-						<th>Answer 4</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr ng-repeat="obj in adminQuestions">
-						<td>{{$index}}</td>
-						<td>{{obj.question}}</td>
-						<td>{{obj.answers[0]}}</td>
-						<td>{{obj.answers[1]}}</td>
-						<td>{{obj.answers[2]}}</td>
-						<td>{{obj.answers[3]}}</td>
-					</tr>
-
-				</tbody>
-			</table>
-		</div>
-	<!-- </div> -->
+				</div>
+			</fieldset>
+		</form>
+	</div>
+	<div class="ccol-xs-8 col-xs-offset-2" ng-show="currentUser">
+		<table class="table table-striped table-hover  well page">
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>Question</th>
+					<th>Answer 1</th>
+					<th>Answer 2</th>
+					<th>Answer 3</th>
+					<th>Answer 4</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="obj in adminQuestions">
+					<td>{{$index}}</td>
+					<td>{{obj.question}}</td>
+					<td>{{obj.answers[0]}}</td>
+					<td>{{obj.answers[1]}}</td>
+					<td>{{obj.answers[2]}}</td>
+					<td>{{obj.answers[3]}}</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<div class="row">
+	<div class="col-lg-12 text-center" ng-show="currentUser">
+		<button type="button" ng-click="logOut()" class="btn btn-danger btn-raised">Logout</button>
+	</div>
+</div>
 </section>
