--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -79,7 +79,6 @@
 		<table class="table table-striped table-hover  well page">
 			<thead>
 				<tr>
-					<th>#</th>
 					<th>Question</th>
 					<th>Answer 1</th>
 					<th>Answer 2</th>
@@ -89,12 +88,11 @@
 			</thead>
 			<tbody>
 				<tr ng-repeat="obj in adminQuestions">
-					<td>{{$index}}</td>
 					<td>{{obj.question}}</td>
-					<td>{{obj.answers[0]}}</td>
-					<td>{{obj.answers[1]}}</td>
-					<td>{{obj.answers[2]}}</td>
-					<td>{{obj.answers[3]}}</td>
+					<td>{{obj.answer1Count}}</td>
+					<td>{{obj.answer2Count}}</td>
+					<td>{{obj.answer3Count}}</td>
+					<td>{{obj.answer4Count}}</td>
 				</tr>
 			</tbody>
 		</table>
