--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,21 +1,21 @@
 <section id="surveySection" data-ng-controller="homeController as hc" data-ng-init="getSurveyQuestion()">
 	<div class="row">
 		<div class="col-xs-8 col-xs-offset-2" style="text-align:left;">
-			<form name="newAttendee" class="well page attendeeForm" data-ng-submit="submitAnswer()" novalidate>
+			<form name="newSurvey" class="well page surveyForm" data-ng-submit="submitAnswer()" novalidate>
 				<fieldset>
 					<div class="form-group">
 						<h2 style="color:#6152bc">{{survey.question}}</h2>
 
 						<div ng-repeat="answer in survey.answers" class="radio">
-							<label style="color:#4a5e9b">
-								<input type="radio" name="sample1" ng-model="survey.selectedAnswer" value="{{$index}}" checked=""><span class="circle"></span><span class="check"></span>
+							<label style="color:#4a5e9b" ng-show="answer">
+								<input type="radio" name="sample1" ng-model="survey.selectedAnswer" value="answer{{$index + 1}}Count" checked="" required><span class="circle"></span><span class="check"></span>
 								{{answer}}
 							</label>
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="col-lg-12">
-							<button type="submit" class="btn btn-primary btn-raised surveySubmitBtn">Submit</button>
+							<button type="submit" class="btn btn-primary btn-raised surveySubmitBtn" ng-disabled="!newSurvey.$valid">Submit</button>
 						</div>
 					</div>
 				</fieldset>
